[tool.poetry]
name = "mdnb"
version = "0.1.0"
description = ""
authors = ["Tristan Slater <hello@trslater.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pdoc = "^10.0.2"

[tool.poetry.scripts]
mdnb = "mdnb.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
